Fix plurk width overflowing bug

--- a/src/_timeline.scss
+++ b/src/_timeline.scss
@@ -45,10 +45,6 @@
         
     }
 
-    .plurk.display.plurk_box {
-        width: 230%;
-    }
-
     background-image: url("https://raw.githubusercontent.com/LineageOS/android_packages_apps_CMWallpapers/cm-14.1/res/drawable-xxhdpi/iconoclast.png");
     background-size: contain;
     background-position: left top;
